# Turtlebot

./: .gitignore  README.md  prep_checker.sh
custom_yolo/: custom_YOLO_train.ipynb
final_Codes/: README.md  launch_cmd.txt  prep_checker.sh  turtlebot4_ws.repos
final_Codes/maps/: key_map.pgm  key_map.yaml  local2.yaml  nav2_net2.yaml
final_Codes/src/turtlebot4_nav2pose/: package.xml  setup.cfg  setup.py
final_Codes/src/turtlebot4_nav2pose/launch/: nav2pose.launch.py
final_Codes/src/turtlebot4_nav2pose/turtlebot4_nav2pose/: init_pose_publisher.py  nav2pose_node.py
final_Codes/src/turtlebot4_tracking/: package.xml  setup.cfg  setup.py
final_Codes/src/turtlebot4_tracking/turtlebot4_tracking/: detection_node.py  target_calculator.py  tracking_node.py
final_Codes/src/twocops_bringup/: package.xml  setup.cfg  setup.py
final_Codes/src/twocops_bringup/launch/: docking.launch.py  twocops_bringup.launch.py
final_Codes/src/twocops_bringup/twocops_bringup/: dock_state_manager.py  docking_node.py  nav2_ready_waiter.py  transition_manager.py
maps/: local.yaml  nav2_net2.yaml
src/turtlebot4_nav2pose/launch/: nav2pose.launch.py
src/turtlebot4_nav2pose/turtlebot4_nav2pose/: init_pose_publisher.py
src/turtlebot4_tracking/launch/: yolo_move_robot.launch.py
src/turtlebot4_tracking/turtlebot4_tracking/: detection_node.py  target_calculator.py  tracking_node.py
src/twocops_bringup/launch/: twocops_bringup.launch.py
src/twocops_bringup/twocops_bringup/: dock_state_manager.py  docking_node.py  nav2_ready_waiter.py  transition_manager.py
